@@ -38,22 +38,26 @@ public class SerialPortManagerImpl implements SerialPortManager {
     private final ReadWriteLock lock;
     private final List<SerialPortIdentifier> freePorts;
     private final List<SerialPortIdentifier> ownedPorts;
-    private boolean initialized;
-
+    private volatile boolean initialized;
+    private volatile boolean portsLoaded; //For lazy loading of ports
 
     public SerialPortManagerImpl() {
         lock = new ReentrantReadWriteLock();
         freePorts = new CopyOnWriteArrayList<SerialPortIdentifier>();
         ownedPorts = new CopyOnWriteArrayList<SerialPortIdentifier>();
         initialized = false;
+        portsLoaded = false;
     }
 
     @Override
     public List<SerialPortIdentifier> getFreeCommPorts() throws Exception {
-        if (!initialized) {
+        if (!portsLoaded) {
             this.lock.writeLock().lock();
             try {
-                initialize(false);
+                if(!portsLoaded) {
+                    refreshPorts();
+                    portsLoaded = true;
+                }
             } finally {
                 this.lock.writeLock().unlock();
             }
@@ -63,10 +67,13 @@ public class SerialPortManagerImpl implements SerialPortManager {
 
     @Override
     public List<SerialPortIdentifier> getAllCommPorts() throws Exception {
-        if (!initialized) {
+        if (!portsLoaded) {
             this.lock.writeLock().lock();
             try {
-                initialize(false);
+                if(!portsLoaded) {
+                    refreshPorts();
+                    portsLoaded = true;
+                }
             } finally {
                 this.lock.writeLock().unlock();
             }
@@ -81,82 +88,87 @@ public class SerialPortManagerImpl implements SerialPortManager {
         this.lock.writeLock().lock();
         try {
             freePorts.clear();
-            initialize(false);
+            refreshPorts();
         } finally {
             this.lock.writeLock().unlock();
         }
     }
 
+    /**
+     * This will only start the threading infrastructure for the ports, the actual 'Lazy load' of all ports is done if/when serial devices are used'
+     */
     @Override
     public void initialize(boolean safe) throws LifecycleException {
 
-        if (safe)
-            return;
-
-        JsscSerialPortManager.instance.initialize();
+        if(initialized) {
+            throw new LifecycleException("Serial Port Manager should only be initialized once");
+        }
         
-        try {
-            String[] portNames;
-            Map<String, Boolean> portOwnership = new HashMap<String, Boolean>();
-
-            switch (SerialNativeInterface.getOsType()) {
-                case SerialNativeInterface.OS_LINUX:
-                    portNames = SerialPortList.getPortNames(
-                            Common.envProps.getString("serial.port.linux.path", "/dev/"),
-                            Pattern.compile(Common.envProps.getString("serial.port.linux.regex",
-                                    "((cu|ttyS|ttyUSB|ttyACM|ttyAMA|rfcomm|ttyO|COM)[0-9]{1,3}|rs(232|485)-[0-9])")));
-                    break;
-                case SerialNativeInterface.OS_MAC_OS_X:
-                    portNames = SerialPortList.getPortNames(
-                            Common.envProps.getString("serial.port.osx.path", "/dev/"),
-                            Pattern.compile(Common.envProps.getString("serial.port.osx.regex",
-                                    "(cu|tty)..*"))); // Was "tty.(serial|usbserial|usbmodem).*")
-                    break;
-                case SerialNativeInterface.OS_WINDOWS:
-                    portNames = SerialPortList.getPortNames(
-                            Common.envProps.getString("serial.port.windows.path", ""),
-                            Pattern.compile(
-                                    Common.envProps.getString("serial.port.windows.regex", "")));
-                default:
-                    portNames = SerialPortList.getPortNames();
-                    break;
-            }
-
-            for (SerialPortIdentifier port : ownedPorts) 
-                    portOwnership.put(port.getName(), true);
-            
-            for (String portName : portNames) {                
-                if (!portOwnership.containsKey(portName)) {
-                    freePorts.add(new SerialPortIdentifier(portName, SerialPortTypes.JSSC));
-                    portOwnership.put(portName, false);
-                } else if(LOG.isDebugEnabled())
-                    LOG.debug("Not adding port " + portName + " to free ports because it is owned.");
-            }
-
-            // Collect any Virtual Comm Ports from the DB and load them in
-            List<VirtualSerialPortConfig> list = VirtualSerialPortConfigDao.getInstance().getAll();
-            if (list != null) {
-                for (VirtualSerialPortConfig config : list) {
-                    if(!portOwnership.containsKey(config.getPortName())) {
-                        freePorts.add(new VirtualSerialPortIdentifier(config));
-                        portOwnership.put(config.getPortName(), false);
-                    } else if(LOG.isWarnEnabled()) {
-                        LOG.warn("Virtual serial port config " + config.getXid() + " named " + config.getPortName() +
-                            " not available due to name conflict with other serial port or it was open during refresh.");
-                    }
-                }
-            }
-            initialized = true;
-        } catch (UnsatisfiedLinkError e) {
-            throw new LifecycleException(e.getMessage());
-        } catch (NoClassDefFoundError e) {
-            throw new LifecycleException(
-                    "Comm configuration error. Check that your serial port DLL or libraries have been correctly installed. "
-                            + e.getMessage());
+        if (safe) {
+            return;
         }
 
+        JsscSerialPortManager.instance.initialize();
     }
 
+    /**
+     * Refresh the ports list
+     * @throws UnsatisfiedLinkError
+     * @throws NoClassDefFoundError
+     */
+    protected void refreshPorts() throws UnsatisfiedLinkError,  NoClassDefFoundError {
+        String[] portNames;
+        Map<String, Boolean> portOwnership = new HashMap<String, Boolean>();
+
+        switch (SerialNativeInterface.getOsType()) {
+            case SerialNativeInterface.OS_LINUX:
+                portNames = SerialPortList.getPortNames(
+                        Common.envProps.getString("serial.port.linux.path", "/dev/"),
+                        Pattern.compile(Common.envProps.getString("serial.port.linux.regex",
+                                "((cu|ttyS|ttyUSB|ttyACM|ttyAMA|rfcomm|ttyO|COM)[0-9]{1,3}|rs(232|485)-[0-9])")));
+                break;
+            case SerialNativeInterface.OS_MAC_OS_X:
+                portNames = SerialPortList.getPortNames(
+                        Common.envProps.getString("serial.port.osx.path", "/dev/"),
+                        Pattern.compile(Common.envProps.getString("serial.port.osx.regex",
+                                "(cu|tty)..*"))); // Was "tty.(serial|usbserial|usbmodem).*")
+                break;
+            case SerialNativeInterface.OS_WINDOWS:
+                portNames = SerialPortList.getPortNames(
+                        Common.envProps.getString("serial.port.windows.path", ""),
+                        Pattern.compile(
+                                Common.envProps.getString("serial.port.windows.regex", "")));
+            default:
+                portNames = SerialPortList.getPortNames();
+                break;
+        }
+
+        for (SerialPortIdentifier port : ownedPorts) 
+                portOwnership.put(port.getName(), true);
+        
+        for (String portName : portNames) {                
+            if (!portOwnership.containsKey(portName)) {
+                freePorts.add(new SerialPortIdentifier(portName, SerialPortTypes.JSSC));
+                portOwnership.put(portName, false);
+            } else if(LOG.isDebugEnabled())
+                LOG.debug("Not adding port " + portName + " to free ports because it is owned.");
+        }
+
+        // Collect any Virtual Comm Ports from the DB and load them in
+        List<VirtualSerialPortConfig> list = VirtualSerialPortConfigDao.getInstance().getAll();
+        if (list != null) {
+            for (VirtualSerialPortConfig config : list) {
+                if(!portOwnership.containsKey(config.getPortName())) {
+                    freePorts.add(new VirtualSerialPortIdentifier(config));
+                    portOwnership.put(config.getPortName(), false);
+                } else if(LOG.isWarnEnabled()) {
+                    LOG.warn("Virtual serial port config " + config.getXid() + " named " + config.getPortName() +
+                        " not available due to name conflict with other serial port or it was open during refresh.");
+                }
+            }
+        }
+    }
+    
     @Override
     public boolean portOwned(String commPortId) {
 
