@@ -1,5 +1,6 @@
 *Version 3.6.5*
 * Fix data point copy button in old UI
+* Fix bug in serial port manager where more than one event processing thread could be created and result in messages being missed
 
 *Version 3.6.4*
 * Revert data source management permission to only allow creating new data sources, not give access to all data sources
